# twistor

./: CMakeLists.txt  Dockerfile  README.md
examples/: CMakeLists.txt
examples/holonomy/: CMakeLists.txt
examples/holonomy/source/: main.cu
include/twistor/: computation_info.hpp  csta.hpp  holonomy.hpp  lattice.hpp
include/twistor/gatl/: csta.hpp
include/twistor/thrust/: async_device_vector.hpp
include/twistor/thrust/cuda/: async_allocator.hpp  stream.hpp
